Fixed text overflow on action buttons [#635]

--- a/comixed-web/src/styles.scss
+++ b/comixed-web/src/styles.scss
@@ -192,4 +192,7 @@ $cx-column-large: 325px;
 .cx-action-button {
   min-width: 100px !important;
   padding-bottom: 5px !important;
+  overflow-x: hidden !important;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
